--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,8 @@ a
 }
 .navbar-container {
   width: 100%;
-  
   background: linear-gradient(to right,var(--primary), var(--secondary));
+  height:95px;
 }
 a {
   color: white;
@@ -47,7 +47,7 @@ a:hover {
 }
 .sidebar-nav {
   width: var(--offcanvas-width);
-  margin-top:58px;
+  margin-top:38px;
   background:var(--primary)
 }
 .sidebar-link {
