--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,11 +85,11 @@ a:hover {
     
 }
 #metismenu a.active {
-  color: #8DFF33;
+  color: #ff7200;
   background-color: rgba(248, 69, 37, 0.1);
   -webkit-box-shadow: none;
   box-shadow: none;
-  border-left: 5px solid #8DFF33;
+  border-left: 5px solid #ff7200;
 }
 #metismenu  a
 {
